# LLMock

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/assets/: demo.cast
examples/: README.md  chaos_scenarios.sh  crewai_resilient_agents.py  langchain_retry.py  llamaindex_pipeline.py  llmock.example.json  llmock.example.yaml  retry_with_openai.py
llmock/: __init__.py  chaos.py  cli.py  errors.py  main.py  simulation.py
llmock/routers/: ai21.py  anthropic.py  base.py  batch.py  cohere.py  gemini.py  groq.py  mistral.py  openai.py  perplexity.py  registry.py  together.py  xai.py
scripts/: record_demo.py
tests/: conftest.py  test_anthropic.py  test_batch.py  test_chaos.py  test_cli.py  test_docs.py  test_e2e_sdk.py  test_error_profiles.py  test_error_shapes.py  test_errors.py  test_mistral.py  test_openai.py  test_provider_batches.py  test_providers.py  test_responses.py  test_simulation_behaviors.py
