[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmock"
dynamic = ["version"]
description = "Zero-cost local mock server for LLM API resilience testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Julien Rabault" }]
keywords = ["llm", "mock-server", "openai", "fastapi", "testing", "resilience", "batch-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
]

[project.scripts]
llmock = "llmock.cli:app"

[project.urls]
Homepage = "https://github.com/JulienRabault/LLMock"
Repository = "https://github.com/JulienRabault/LLMock"
Issues = "https://github.com/JulienRabault/LLMock/issues"
Changelog = "https://github.com/JulienRabault/LLMock/blob/main/CHANGELOG.md"
Documentation = "https://github.com/JulienRabault/LLMock#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "twine>=5.1.1",
]

[tool.hatch.version]
path = "llmock/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["llmock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
